# haskell-effects-tutorial

./: README.md  project.cabal
base-image/: Dockerfile  build.sh
java/: .classpath  pom.xml
java/src/main/java/de/terministic/tinydes/metamodel/: Condition.java  Delay.java  Event.java  Model.java  ModelState.java  StateChange.java  Transition.java
java/src/main/java/de/terministic/tinydes/modelexamples/: MinimalModel.java  Mm1Model.java
java/src/main/java/de/terministic/tinydes/modellibrary/: ConstantDelay.java  ExponentialDelay.java  FullReportGenerator.java  IncrementValueStateChange.java  LargerThanValueCondition.java  SetValueStateChange.java  TrueCondition.java  ZeroDelay.java
java/src/main/java/de/terministic/tinydes/simulatorcore/: Clock.java  EventInstance.java  EventList.java  MainProgram.java  ReportGenerator.java
java/src/main/java/de/terministic/tinydes/start/: StartMinimalModel.java  StartMm1Model.java
live/.devcontainer/: Dockerfile
live/src/: Free.hs
live/src/DES/: FusedEffects.hs  Monad.hs  MonadTransformer.hs  Polysemy.hs
prep/: default.nix  hie.yaml  project.cabal
prep/.devcontainer/: devcontainer.json
prep/src/DES/: MTL.hs  Monad.hs
prep/src/Polysemy/: Random.hs
src/: Free.hs
src/DES/: FusedEffects.hs  MTL.hs  Monad.hs  MonadTransformer.hs  Polysemy.hs
src/DES/Monad/: DES.hs  DESMT.hs
src/Polysemy/: KVStore.hs
vscode-folder/: project.cabal
vscode-folder/.devcontainer/: Dockerfile
vscode-folder/src/: PolysemyExample.hs
vscode-folder/src/Polysemy/: KVStore.hs
