name:                project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mikesperber/haskell-effects-tutorial
license:             BSD3
author:              Mike Sperber
maintainer:          michael.sperber@active-group.de
copyright:           2020 Michael Sperber
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable my-project
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       polysemy >= 1.3, polysemy-plugin >= 0.2.5,
                       fused-effects >= 1.0,
                       extensible-effects >= 5.0,
                       -- capability >= 0.2, generic-lens >= 1.2, primitive >= 0.8,
                       rio >= 0.1.14
